# any-gpu

./: BACKLOG.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md
examples/: bench.rs  candle_bench.rs  train_subatomic.rs
src/: autograd.rs  device.rs  lib.rs  nanosign.rs  ops.rs  optim.rs  tensor.rs  train.rs
src/ops/: attention.rs  conv.rs  elementwise.rs  mod.rs  norm.rs  tensor_ops.rs  upsample.rs
