# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6

[package]
name = "any-gpu"
version = "0.1.0"
edition = "2024"
description = "Tensor engine for every GPU. AMD, NVIDIA, Intel, Apple. One codebase, zero vendor lock-in. wgpu under the hood."
license = "Unlicense"
repository = "https://github.com/cochranblock/any-gpu"
keywords = ["gpu", "wgpu", "tensor", "ml", "compute"]
categories = ["science", "graphics"]

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
pollster = "0.4"
blake3 = "1"

[dependencies.candle-core]
version = "0.10"
optional = true

[dev-dependencies]
rand = "0.8"

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
candle-bench = ["candle-core"]

[[example]]
name = "candle_bench"
required-features = ["candle-core"]

[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
